@@ -1,1 +1,2 @@
 etc/grid-security/vomsdir
+etc/vomses
