@@ -1,0 +1,1 @@
+"eela" "voms.lip.pt" "15001" "/C=PT/O=LIPCA/O=LIP/OU=Lisboa/CN=host/voms.lip.pt" "eela"
