@@ -1,0 +1,2 @@
+"geant4" "lcg-voms.cern.ch" "15007" "/DC=ch/DC=cern/OU=computers/CN=lcg-voms.cern.ch" "geant4"
+"geant4" "voms.cern.ch" "15007" "/DC=ch/DC=cern/OU=computers/CN=voms.cern.ch" "geant4"
