@@ -1,0 +1,2 @@
+"lhcb" "lcg-voms.cern.ch" "15003" "/DC=ch/DC=cern/OU=computers/CN=lcg-voms.cern.ch" "lhcb"
+"lhcb" "voms.cern.ch" "15003" "/DC=ch/DC=cern/OU=computers/CN=voms.cern.ch" "lhcb"
