@@ -1,0 +1,2 @@
+"na48" "lcg-voms.cern.ch" "15009" "/DC=ch/DC=cern/OU=computers/CN=lcg-voms.cern.ch" "na48"
+"na48" "voms.cern.ch" "15009" "/DC=ch/DC=cern/OU=computers/CN=voms.cern.ch" "na48"
