@@ -1,0 +1,2 @@
+"unosat" "lcg-voms.cern.ch" "15006" "/DC=ch/DC=cern/OU=computers/CN=lcg-voms.cern.ch" "unosat"
+"unosat" "voms.cern.ch" "15006" "/DC=ch/DC=cern/OU=computers/CN=voms.cern.ch" "unosat"
