@@ -1,0 +1,2 @@
+"vo.gear.cern.ch" "lcg-voms.cern.ch" "15008" "/DC=ch/DC=cern/OU=computers/CN=lcg-voms.cern.ch" "vo.gear.cern.ch"
+"vo.gear.cern.ch" "voms.cern.ch" "15008" "/DC=ch/DC=cern/OU=computers/CN=voms.cern.ch" "vo.gear.cern.ch"
