@@ -1,0 +1,2 @@
+"vo.sixt.cern.ch" "lcg-voms.cern.ch" "15005" "/DC=ch/DC=cern/OU=computers/CN=lcg-voms.cern.ch" "vo.sixt.cern.ch"
+"vo.sixt.cern.ch" "voms.cern.ch" "15005" "/DC=ch/DC=cern/OU=computers/CN=voms.cern.ch" "vo.sixt.cern.ch"
